_ingress_backup/leninkart-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leninkart-api-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/products/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: leninkart-product-service
            port:
              number: 8081

      - path: /api/orders/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: leninkart-order-service
            port:
              number: 8080
