_ingress_backup/leninkart-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leninkart-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/products
        pathType: Prefix
        backend:
          service:
            name: leninkart-product-service
            port:
              number: 8081

      - path: /api/orders
        pathType: Prefix
        backend:
          service:
            name: leninkart-order-service
            port:
              number: 8080

      - path: /
        pathType: Prefix
        backend:
          service:
            name: leninkart-frontend
            port:
              number: 80
